--- a/app/javascript/mastodon/locales/ta.json
+++ b/app/javascript/mastodon/locales/ta.json
@@ -1,7 +1,7 @@
 {
   "account.add_or_remove_from_list": "பட்டியல்களில் இருந்து சேர் அல்லது நீக்குக",
   "account.badges.bot": "பாட்",
-  "account.block": "",
+  "account.block": "Block @{name}",
   "account.block_domain": "எல்லாவற்றையும் மறைக்க {domain}",
   "account.blocked": "தடைமுட்டுகள்",
   "account.direct": "நேரடி செய்தி @{name}",
@@ -17,15 +17,15 @@
   "account.hide_reblogs": "இருந்து ஊக்கியாக மறை @{name}",
   "account.link_verified_on": "இந்த இணைப்பை உரிமையாளர் சரிபார்க்கப்பட்டது {date}",
   "account.locked_info": "இந்தக் கணக்கு தனியுரிமை நிலை பூட்டப்பட்டுள்ளது. அவர்களைப் பின்தொடர்பவர் யார் என்பதை உரிமையாளர் கைமுறையாக மதிப்பாய்வு செய்கிறார்.",
-  "account.media": "",
+  "account.media": "Media",
   "account.mention": "குறிப்பிடு @{name}",
   "account.moved_to": "{name} நகர்த்தப்பட்டது:",
   "account.mute": "ஊமையான @{name}",
   "account.mute_notifications": "அறிவிப்புகளை முடக்கு @{name}",
   "account.muted": "முடக்கியது",
-  "account.posts": "",
+  "account.posts": "Toots",
   "account.posts_with_replies": "Toots மற்றும் பதில்கள்",
-  "account.report": "",
+  "account.report": "Report @{name}",
   "account.requested": "ஒப்புதலுக்காக காத்திருக்கிறது. கோரிக்கையை ரத்துசெய்ய கிளிக் செய்க",
   "account.share": "பங்கிடு @{name}'s மனித முகத்தின்",
   "account.show_reblogs": "காட்டு boosts இருந்து @{name}",
@@ -40,7 +40,7 @@
   "boost_modal.combo": "நீங்கள் அழுத்தவும் {combo} அடுத்த முறை தவிர்க்கவும்",
   "bundle_column_error.body": "இந்த கூறுகளை ஏற்றும்போது ஏதோ தவறு ஏற்பட்டது.",
   "bundle_column_error.retry": "மீண்டும் முயற்சி செய்",
-  "bundle_column_error.title": "",
+  "bundle_column_error.title": "Network error",
   "bundle_modal_error.close": "நெருக்கமாக",
   "bundle_modal_error.message": "இந்த கூறுகளை ஏற்றும்போது ஏதோ தவறு ஏற்பட்டது.",
   "bundle_modal_error.retry": "மீண்டும் முயற்சி செய்",
@@ -50,10 +50,10 @@
   "column.domain_blocks": "மறைந்த களங்கள்",
   "column.favourites": "விருப்பத்துக்குகந்த",
   "column.follow_requests": "கோரிக்கைகளை பின்பற்றவும்",
-  "column.home": "",
+  "column.home": "Home",
   "column.lists": "குதிரை வீர்ர்கள்",
   "column.mutes": "முடக்கப்பட்ட பயனர்கள்",
-  "column.notifications": "",
+  "column.notifications": "Notifications",
   "column.pins": "Pinned toot",
   "column.public": "கூட்டாட்சி காலக்கெடு",
   "column_back_button.label": "ஆதரி",
@@ -75,21 +75,21 @@
   "compose_form.poll.duration": "வாக்கெடுப்பு காலம்",
   "compose_form.poll.option_placeholder": "தேர்ந்தெடுப்ப {number}",
   "compose_form.poll.remove_option": "இந்த விருப்பத்தை அகற்றவும்",
-  "compose_form.publish": "",
-  "compose_form.publish_loud": "",
-  "compose_form.sensitive.hide": "",
+  "compose_form.publish": "Toot",
+  "compose_form.publish_loud": "{publish}!",
+  "compose_form.sensitive.hide": "Mark media as sensitive",
   "compose_form.sensitive.marked": "ஊடகம் உணர்திறன் என குறிக்கப்பட்டுள்ளது",
   "compose_form.sensitive.unmarked": "ஊடகம் உணர்திறன் என குறிக்கப்படவில்லை",
   "compose_form.spoiler.marked": "எச்சரிக்கை பின்னால் உரை மறைக்கப்பட்டுள்ளது",
   "compose_form.spoiler.unmarked": "உரை மறைக்கப்படவில்லை",
   "compose_form.spoiler_placeholder": "இங்கே உங்கள் எச்சரிக்கையை எழுதுங்கள்",
   "confirmation_modal.cancel": "எதிராணை",
-  "confirmations.block.block_and_report": "",
-  "confirmations.block.confirm": "",
+  "confirmations.block.block_and_report": "Block & Report",
+  "confirmations.block.confirm": "Block",
   "confirmations.block.message": "நீங்கள் நிச்சயமாக தடைசெய்ய விரும்புகிறீர்களா {name}?",
-  "confirmations.delete.confirm": "",
+  "confirmations.delete.confirm": "Delete",
   "confirmations.delete.message": "இந்த நிலையை நிச்சயமாக நீக்க விரும்புகிறீர்களா?",
-  "confirmations.delete_list.confirm": "",
+  "confirmations.delete_list.confirm": "Delete",
   "confirmations.delete_list.message": "இந்த பட்டியலில் நிரந்தரமாக நீக்க விரும்புகிறீர்களா?",
   "confirmations.domain_block.confirm": "முழு டொமைனை மறை",
   "confirmations.domain_block.message": "நீங்கள் உண்மையில், நிச்சயமாக நீங்கள் முழு தடுக்க வேண்டும் நிச்சயமாக {domain}? பெரும்பாலான சந்தர்ப்பங்களில் ஒரு சில இலக்குகள் அல்லது மியூட்கள் போதுமானவை மற்றும் சிறந்தவை. எந்த பொது நேரத்திலும் அல்லது உங்கள் அறிவிப்புகளிலும் அந்தக் களத்திலிருந்து உள்ளடக்கத்தை நீங்கள் பார்க்க மாட்டீர்கள். அந்த களத்தில் இருந்து உங்கள் ஆதரவாளர்கள் அகற்றப்படுவார்கள்.",
@@ -107,15 +107,15 @@
   "emoji_button.custom": "வழக்கம்",
   "emoji_button.flags": "கொடி",
   "emoji_button.food": "உணவு மற்றும் பானம்",
-  "emoji_button.label": "",
+  "emoji_button.label": "Insert emoji",
   "emoji_button.nature": "இயற்கை",
   "emoji_button.not_found": "எமோஜோஸ் இல்லை! (╯°□°）╯︵ ┻━┻",
   "emoji_button.objects": "மறுப்ப கூறு",
-  "emoji_button.people": "",
+  "emoji_button.people": "People",
   "emoji_button.recent": "அடிக்கடி பயன்படுத்தப்படும்",
   "emoji_button.search": "தேடல்...",
   "emoji_button.search_results": "தேடல் முடிவுகள்",
-  "emoji_button.symbols": "",
+  "emoji_button.symbols": "Symbols",
   "emoji_button.travel": "சுற்றுலா மற்றும் இடங்கள்",
   "empty_column.account_timeline": "இல்லை toots இங்கே!",
   "empty_column.account_unavailable": "சுயவிவரம் கிடைக்கவில்லை",
@@ -138,7 +138,7 @@
   "follow_request.reject": "விலக்கு",
   "getting_started.developers": "உருவாக்குநர்கள்",
   "getting_started.directory": "சுயவிவர அடைவு",
-  "getting_started.documentation": "",
+  "getting_started.documentation": "Documentation",
   "getting_started.heading": "தொடங்குதல்",
   "getting_started.invite": "நபர்களை அழைக்கவும்",
   "getting_started.open_source_notice": "Mastodon திறந்த மூல மென்பொருள். GitHub இல் நீங்கள் பங்களிக்கவோ அல்லது புகார் அளிக்கவோ முடியும் {github}.",
@@ -156,15 +156,16 @@
   "home.column_settings.basic": "அடிப்படையான",
   "home.column_settings.show_reblogs": "காட்டு boosts",
   "home.column_settings.show_replies": "பதில்களைக் காண்பி",
+  "home.column_settings.update_live": "Update in real-time",
   "intervals.full.days": "{number, plural, one {# day} மற்ற {# days}}",
   "intervals.full.hours": "{number, plural, one {# hour} மற்ற {# hours}}",
   "intervals.full.minutes": "{number, plural, one {# minute} மற்ற {# minutes}}",
   "introduction.federation.action": "அடுத்த",
-  "introduction.federation.federated.headline": "",
+  "introduction.federation.federated.headline": "Federated",
   "introduction.federation.federated.text": "கூட்டமைப்பின் பிற சேவையகங்களிலிருந்து பொது பதிவுகள் கூட்டப்பட்ட காலக்கெடுவில் தோன்றும்.",
-  "introduction.federation.home.headline": "",
+  "introduction.federation.home.headline": "Home",
   "introduction.federation.home.text": "நீங்கள் பின்பற்றும் நபர்களின் இடுகைகள் உங்கள் வீட்டு ஊட்டத்தில் தோன்றும். நீங்கள் எந்த சர்வரில் யாரையும் பின்பற்ற முடியும்!",
-  "introduction.federation.local.headline": "",
+  "introduction.federation.local.headline": "Local",
   "introduction.federation.local.text": "உள்ளூர் சேவையகத்தில் தோன்றும் அதே சர்வரில் உள்ளவர்களின் பொது இடுகைகள்.",
   "introduction.interactions.action": "பயிற்சி முடிக்க!",
   "introduction.interactions.favourite.headline": "விருப்பத்துக்குகந்த",
@@ -181,10 +182,10 @@
   "keyboard_shortcuts.boost": "அதிகரிக்கும்",
   "keyboard_shortcuts.column": "நெடுவரிசைகளில் ஒன்றில் நிலைக்கு கவனம் செலுத்த வேண்டும்",
   "keyboard_shortcuts.compose": "தொகு உரைப்பகுதியை கவனத்தில் கொள்ளவும்",
-  "keyboard_shortcuts.description": "",
+  "keyboard_shortcuts.description": "Description",
   "keyboard_shortcuts.direct": "நேரடி செய்திகள் பத்தி திறக்க",
   "keyboard_shortcuts.down": "பட்டியலில் கீழே நகர்த்த",
-  "keyboard_shortcuts.enter": "",
+  "keyboard_shortcuts.enter": "to open status",
   "keyboard_shortcuts.favourite": "பிடித்தது",
   "keyboard_shortcuts.favourites": "பிடித்தவை பட்டியலை திறக்க",
   "keyboard_shortcuts.federated": "ஒருங்கிணைந்த நேரத்தை திறக்க",
@@ -204,23 +205,24 @@
   "keyboard_shortcuts.search": "தேடல் கவனம் செலுத்த",
   "keyboard_shortcuts.start": "'தொடங்குவதற்கு' நெடுவரிசை திறக்க",
   "keyboard_shortcuts.toggle_hidden": "CW க்கு பின்னால் உரையை மறைக்க / மறைக்க",
-  "keyboard_shortcuts.toggle_sensitivity": "",
+  "keyboard_shortcuts.toggle_sensitivity": "to show/hide media",
   "keyboard_shortcuts.toot": "தொடங்க ஒரு புதிய toot",
   "keyboard_shortcuts.unfocus": "உரை பகுதியை / தேடலை கவனம் செலுத்த வேண்டும்",
   "keyboard_shortcuts.up": "பட்டியலில் மேலே செல்ல",
   "lightbox.close": "நெருக்கமாக",
   "lightbox.next": "அடுத்த",
   "lightbox.previous": "சென்ற",
-  "lightbox.view_context": "",
+  "lightbox.view_context": "View context",
   "lists.account.add": "பட்டியலில் சேர்",
   "lists.account.remove": "பட்டியலில் இருந்து அகற்று",
-  "lists.delete": "",
+  "lists.delete": "Delete list",
   "lists.edit": "பட்டியலை திருத்து",
   "lists.edit.submit": "தலைப்பு மாற்றவும்",
   "lists.new.create": "பட்டியலில் சேர்",
   "lists.new.title_placeholder": "புதிய பட்டியல் தலைப்பு",
   "lists.search": "நீங்கள் பின்தொடரும் நபர்கள் மத்தியில் தேடுதல்",
   "lists.subheading": "உங்கள் பட்டியல்கள்",
+  "load_pending": "{count, plural, one {# new item} other {# new items}}",
   "loading_indicator.label": "ஏற்றுதல்...",
   "media_gallery.toggle_visible": "நிலைமாற்று தெரியும்",
   "missing_indicator.label": "கிடைக்கவில்லை",
@@ -237,16 +239,16 @@
   "navigation_bar.favourites": "விருப்பத்துக்குகந்த",
   "navigation_bar.filters": "முடக்கப்பட்ட வார்த்தைகள்",
   "navigation_bar.follow_requests": "கோரிக்கைகளை பின்பற்றவும்",
-  "navigation_bar.follows_and_followers": "",
+  "navigation_bar.follows_and_followers": "Follows and followers",
   "navigation_bar.info": "இந்த நிகழ்வு பற்றி",
   "navigation_bar.keyboard_shortcuts": "சுருக்குவிசைகள்",
   "navigation_bar.lists": "குதிரை வீர்ர்கள்",
   "navigation_bar.logout": "விடு பதிகை",
   "navigation_bar.mutes": "முடக்கப்பட்ட பயனர்கள்",
-  "navigation_bar.personal": "",
+  "navigation_bar.personal": "Personal",
   "navigation_bar.pins": "பொருத்தப்பட்டன toots",
   "navigation_bar.preferences": "விருப்பங்கள்",
-  "navigation_bar.profile_directory": "",
+  "navigation_bar.profile_directory": "Profile directory",
   "navigation_bar.public_timeline": "கூட்டாட்சி காலக்கெடு",
   "navigation_bar.security": "பத்திரம்",
   "notification.favourite": "{name} ஆர்வம் கொண்டவர், உங்கள் நிலை",
@@ -264,7 +266,7 @@
   "notifications.column_settings.follow": "புதிய பின்பற்றுபவர்கள்:",
   "notifications.column_settings.mention": "குறிப்பிடுகிறது:",
   "notifications.column_settings.poll": "கருத்துக்கணிப்பு முடிவுகள்:",
-  "notifications.column_settings.push": "",
+  "notifications.column_settings.push": "Push notifications",
   "notifications.column_settings.reblog": "மதிப்பை உயர்த்து:",
   "notifications.column_settings.show": "பத்தியில் காண்பி",
   "notifications.column_settings.sound": "ஒலி விளையாட",
@@ -274,7 +276,7 @@
   "notifications.filter.follows": "பின்பற்று",
   "notifications.filter.mentions": "குறிப்பிடுகிறார்",
   "notifications.filter.polls": "கருத்துக்கணிப்பு முடிவுகள்",
-  "notifications.group": "",
+  "notifications.group": "{count} notifications",
   "poll.closed": "மூடிய",
   "poll.refresh": "பத்துயிர்ப்ப?ட்டு",
   "poll.total_votes": "{count, plural, one {# vote} மற்ற {# votes}}",
@@ -287,41 +289,42 @@
   "privacy.private.long": "பின்தொடர்பவர்களுக்கு மட்டுமே இடுகை",
   "privacy.private.short": "பின்பற்றுபவர்கள் மட்டும்",
   "privacy.public.long": "பொது நேரங்களுக்கான இடுகை",
-  "privacy.public.short": "",
+  "privacy.public.short": "Public",
   "privacy.unlisted.long": "Do not show in public timelines",
   "privacy.unlisted.short": "பட்டியலிடப்படாத",
   "regeneration_indicator.label": "சுமையேற்றம்…",
   "regeneration_indicator.sublabel": "உங்கள் வீட்டு ஊட்டம் தயார் செய்யப்படுகிறது!",
-  "relative_time.days": "",
-  "relative_time.hours": "",
+  "relative_time.days": "{number}d",
+  "relative_time.hours": "{number}h",
   "relative_time.just_now": "இப்பொழுது",
-  "relative_time.minutes": "",
-  "relative_time.seconds": "",
+  "relative_time.minutes": "{number}m",
+  "relative_time.seconds": "{number}s",
   "reply_indicator.cancel": "எதிராணை",
   "report.forward": "முன்னோக்கி {target}",
   "report.forward_hint": "கணக்கு மற்றொரு சேவையகத்திலிருந்து வருகிறது. அறிக்கையின் அநாமதேய பிரதி ஒன்றை அனுப்பவும்.?",
   "report.hint": "அறிக்கை உங்கள் மாதிரியாக மாற்றியமைக்கப்படும். கீழே உள்ள கணக்கை நீங்கள் ஏன் புகாரளிக்கிறீர்கள் என்பதற்கான விளக்கத்தை வழங்கலாம்:",
   "report.placeholder": "கூடுதல் கருத்துரைகள்",
-  "report.submit": "",
+  "report.submit": "Submit",
   "report.target": "Report {target}",
   "search.placeholder": "தேடு",
   "search_popout.search_format": "மேம்பட்ட தேடல் வடிவம்",
   "search_popout.tips.full_text": "எளிமையான உரை நீங்கள் எழுதப்பட்ட, புகழ், அதிகரித்தது, அல்லது குறிப்பிட்டுள்ள, அதே போல் பயனர் பெயர்கள், காட்சி பெயர்கள், மற்றும் ஹேஸ்டேகைகளை கொண்டுள்ளது என்று நிலைகளை கொடுக்கிறது.",
   "search_popout.tips.hashtag": "ஹேஸ்டேக்",
-  "search_popout.tips.status": "",
+  "search_popout.tips.status": "status",
   "search_popout.tips.text": "எளிய உரை காட்சி பெயர்கள், பயனர்பெயர்கள் மற்றும் ஹாஷ்டேட்களுடன் பொருந்துகிறது",
-  "search_popout.tips.user": "",
-  "search_results.accounts": "",
+  "search_popout.tips.user": "user",
+  "search_results.accounts": "People",
   "search_results.hashtags": "ஹாஷ்டேக்குகளைச்",
-  "search_results.statuses": "",
+  "search_results.statuses": "Toots",
+  "search_results.statuses_fts_disabled": "Searching toots by their content is not enabled on this Mastodon server.",
   "search_results.total": "{count, number} {count, plural, one {result} மற்ற {results}}",
   "status.admin_account": "மிதமான இடைமுகத்தை திறக்க @{name}",
   "status.admin_status": "மிதமான இடைமுகத்தில் இந்த நிலையை திறக்கவும்",
-  "status.block": "",
+  "status.block": "Block @{name}",
   "status.cancel_reblog_private": "இல்லை பூஸ்ட்",
   "status.cannot_reblog": "இந்த இடுகை அதிகரிக்க முடியாது",
   "status.copy": "நிலைக்கு இணைப்பை நகலெடு",
-  "status.delete": "",
+  "status.delete": "Delete",
   "status.detailed_status": "விரிவான உரையாடல் காட்சி",
   "status.direct": "நேரடி செய்தி @{name}",
   "status.embed": "கிடத்து",
@@ -344,7 +347,7 @@
   "status.redraft": "நீக்கு மற்றும் மீண்டும் வரைவு",
   "status.reply": "பதில்",
   "status.replyAll": "நூலுக்கு பதிலளிக்கவும்",
-  "status.report": "",
+  "status.report": "Report @{name}",
   "status.sensitive_warning": "உணர்திறன் உள்ளடக்கம்",
   "status.share": "பங்கிடு",
   "status.show_less": "குறைவாகக் காண்பி",
@@ -356,10 +359,10 @@
   "status.unpin": "சுயவிவரத்திலிருந்து நீக்கவும்",
   "suggestions.dismiss": "பரிந்துரை விலக்க",
   "suggestions.header": "நீங்கள் ஆர்வமாக இருக்கலாம் …",
-  "tabs_bar.federated_timeline": "",
-  "tabs_bar.home": "",
-  "tabs_bar.local_timeline": "",
-  "tabs_bar.notifications": "",
+  "tabs_bar.federated_timeline": "Federated",
+  "tabs_bar.home": "Home",
+  "tabs_bar.local_timeline": "Local",
+  "tabs_bar.notifications": "Notifications",
   "tabs_bar.search": "தேடு",
   "time_remaining.days": "{number, plural, one {# day} மற்ற {# days}} left",
   "time_remaining.hours": "{number, plural, one {# hour} மற்ற {# hours}} left",
@@ -374,15 +377,15 @@
   "upload_error.poll": "கோப்பு பதிவேற்றம் அனுமதிக்கப்படவில்லை.",
   "upload_form.description": "பார்வையற்ற விவரிக்கவும்",
   "upload_form.focus": "மாற்றம் முன்னோட்டம்",
-  "upload_form.undo": "",
+  "upload_form.undo": "Delete",
   "upload_progress.label": "ஏற்றுகிறது ...",
   "video.close": "வீடியோவை மூடு",
   "video.exit_fullscreen": "முழு திரையில் இருந்து வெளியேறவும்",
   "video.expand": "வீடியோவை விரிவாக்கு",
-  "video.fullscreen": "",
+  "video.fullscreen": "Full screen",
   "video.hide": "வீடியோவை மறை",
   "video.mute": "ஒலி முடக்கவும்",
-  "video.pause": "",
+  "video.pause": "Pause",
   "video.play": "விளையாடு",
   "video.unmute": "ஒலி மெளனமாக இல்லை"
 }
