--- a/app/javascript/mastodon/locales/id.json
+++ b/app/javascript/mastodon/locales/id.json
@@ -1,6 +1,6 @@
 {
   "account.add_or_remove_from_list": "Tambah atau Hapus dari daftar",
-  "account.badges.bot": "",
+  "account.badges.bot": "Bot",
   "account.block": "Blokir @{name}",
   "account.block_domain": "Sembunyikan segalanya dari {domain}",
   "account.blocked": "Terblokir",
@@ -149,138 +149,140 @@
   "hashtag.column_header.tag_mode.none": "tanpa {additional}",
   "hashtag.column_settings.select.no_options_message": "Tidak ada saran yang ditemukan",
   "hashtag.column_settings.select.placeholder": "Masukkan tagar…",
-  "hashtag.column_settings.tag_mode.all": "",
-  "hashtag.column_settings.tag_mode.any": "",
-  "hashtag.column_settings.tag_mode.none": "",
+  "hashtag.column_settings.tag_mode.all": "All of these",
+  "hashtag.column_settings.tag_mode.any": "Any of these",
+  "hashtag.column_settings.tag_mode.none": "None of these",
   "hashtag.column_settings.tag_toggle": "Include additional tags in this column",
   "home.column_settings.basic": "Dasar",
   "home.column_settings.show_reblogs": "Tampilkan boost",
   "home.column_settings.show_replies": "Tampilkan balasan",
-  "intervals.full.days": "",
-  "intervals.full.hours": "",
-  "intervals.full.minutes": "",
-  "introduction.federation.action": "",
-  "introduction.federation.federated.headline": "",
-  "introduction.federation.federated.text": "",
-  "introduction.federation.home.headline": "",
-  "introduction.federation.home.text": "",
-  "introduction.federation.local.headline": "",
-  "introduction.federation.local.text": "",
-  "introduction.interactions.action": "",
-  "introduction.interactions.favourite.headline": "",
-  "introduction.interactions.favourite.text": "",
-  "introduction.interactions.reblog.headline": "",
-  "introduction.interactions.reblog.text": "",
-  "introduction.interactions.reply.headline": "",
-  "introduction.interactions.reply.text": "",
-  "introduction.welcome.action": "",
-  "introduction.welcome.headline": "",
-  "introduction.welcome.text": "",
+  "home.column_settings.update_live": "Update in real-time",
+  "intervals.full.days": "{number, plural, one {# day} other {# days}}",
+  "intervals.full.hours": "{number, plural, one {# hour} other {# hours}}",
+  "intervals.full.minutes": "{number, plural, one {# minute} other {# minutes}}",
+  "introduction.federation.action": "Next",
+  "introduction.federation.federated.headline": "Federated",
+  "introduction.federation.federated.text": "Public posts from other servers of the fediverse will appear in the federated timeline.",
+  "introduction.federation.home.headline": "Home",
+  "introduction.federation.home.text": "Posts from people you follow will appear in your home feed. You can follow anyone on any server!",
+  "introduction.federation.local.headline": "Local",
+  "introduction.federation.local.text": "Public posts from people on the same server as you will appear in the local timeline.",
+  "introduction.interactions.action": "Finish toot-orial!",
+  "introduction.interactions.favourite.headline": "Favourite",
+  "introduction.interactions.favourite.text": "You can save a toot for later, and let the author know that you liked it, by favouriting it.",
+  "introduction.interactions.reblog.headline": "Boost",
+  "introduction.interactions.reblog.text": "You can share other people's toots with your followers by boosting them.",
+  "introduction.interactions.reply.headline": "Reply",
+  "introduction.interactions.reply.text": "You can reply to other people's and your own toots, which will chain them together in a conversation.",
+  "introduction.welcome.action": "Let's go!",
+  "introduction.welcome.headline": "First steps",
+  "introduction.welcome.text": "Welcome to the fediverse! In a few moments, you'll be able to broadcast messages and talk to your friends across a wide variety of servers. But this server, {domain}, is special—it hosts your profile, so remember its name.",
   "keyboard_shortcuts.back": "untuk kembali",
-  "keyboard_shortcuts.blocked": "",
+  "keyboard_shortcuts.blocked": "to open blocked users list",
   "keyboard_shortcuts.boost": "untuk menyebarkan",
   "keyboard_shortcuts.column": "untuk fokus kepada sebuah status di sebuah kolom",
   "keyboard_shortcuts.compose": "untuk fokus ke area penulisan",
   "keyboard_shortcuts.description": "Deskripsi",
-  "keyboard_shortcuts.direct": "",
+  "keyboard_shortcuts.direct": "to open direct messages column",
   "keyboard_shortcuts.down": "untuk pindah ke bawah dalam sebuah daftar",
   "keyboard_shortcuts.enter": "untuk membuka status",
   "keyboard_shortcuts.favourite": "untuk memfavoritkan",
-  "keyboard_shortcuts.favourites": "",
-  "keyboard_shortcuts.federated": "",
+  "keyboard_shortcuts.favourites": "to open favourites list",
+  "keyboard_shortcuts.federated": "to open federated timeline",
   "keyboard_shortcuts.heading": "Pintasan keyboard",
-  "keyboard_shortcuts.home": "",
-  "keyboard_shortcuts.hotkey": "",
-  "keyboard_shortcuts.legend": "",
-  "keyboard_shortcuts.local": "",
-  "keyboard_shortcuts.mention": "",
-  "keyboard_shortcuts.muted": "",
-  "keyboard_shortcuts.my_profile": "",
-  "keyboard_shortcuts.notifications": "",
-  "keyboard_shortcuts.pinned": "",
-  "keyboard_shortcuts.profile": "",
-  "keyboard_shortcuts.reply": "",
-  "keyboard_shortcuts.requests": "",
+  "keyboard_shortcuts.home": "to open home timeline",
+  "keyboard_shortcuts.hotkey": "Hotkey",
+  "keyboard_shortcuts.legend": "to display this legend",
+  "keyboard_shortcuts.local": "to open local timeline",
+  "keyboard_shortcuts.mention": "to mention author",
+  "keyboard_shortcuts.muted": "to open muted users list",
+  "keyboard_shortcuts.my_profile": "to open your profile",
+  "keyboard_shortcuts.notifications": "to open notifications column",
+  "keyboard_shortcuts.pinned": "to open pinned toots list",
+  "keyboard_shortcuts.profile": "to open author's profile",
+  "keyboard_shortcuts.reply": "to reply",
+  "keyboard_shortcuts.requests": "to open follow requests list",
   "keyboard_shortcuts.search": "untuk fokus mencari",
-  "keyboard_shortcuts.start": "",
-  "keyboard_shortcuts.toggle_hidden": "",
-  "keyboard_shortcuts.toggle_sensitivity": "",
-  "keyboard_shortcuts.toot": "",
-  "keyboard_shortcuts.unfocus": "",
-  "keyboard_shortcuts.up": "",
+  "keyboard_shortcuts.start": "to open \"get started\" column",
+  "keyboard_shortcuts.toggle_hidden": "to show/hide text behind CW",
+  "keyboard_shortcuts.toggle_sensitivity": "to show/hide media",
+  "keyboard_shortcuts.toot": "to start a brand new toot",
+  "keyboard_shortcuts.unfocus": "to un-focus compose textarea/search",
+  "keyboard_shortcuts.up": "to move up in the list",
   "lightbox.close": "Tutup",
-  "lightbox.next": "",
-  "lightbox.previous": "",
-  "lightbox.view_context": "",
-  "lists.account.add": "",
-  "lists.account.remove": "",
-  "lists.delete": "",
-  "lists.edit": "",
-  "lists.edit.submit": "",
-  "lists.new.create": "",
-  "lists.new.title_placeholder": "",
-  "lists.search": "",
-  "lists.subheading": "",
+  "lightbox.next": "Next",
+  "lightbox.previous": "Previous",
+  "lightbox.view_context": "View context",
+  "lists.account.add": "Add to list",
+  "lists.account.remove": "Remove from list",
+  "lists.delete": "Delete list",
+  "lists.edit": "Edit list",
+  "lists.edit.submit": "Change title",
+  "lists.new.create": "Add list",
+  "lists.new.title_placeholder": "New list title",
+  "lists.search": "Search among people you follow",
+  "lists.subheading": "Your lists",
+  "load_pending": "{count, plural, one {# new item} other {# new items}}",
   "loading_indicator.label": "Tunggu sebentar...",
   "media_gallery.toggle_visible": "Tampil/Sembunyikan",
   "missing_indicator.label": "Tidak ditemukan",
-  "missing_indicator.sublabel": "",
-  "mute_modal.hide_notifications": "",
-  "navigation_bar.apps": "",
+  "missing_indicator.sublabel": "This resource could not be found",
+  "mute_modal.hide_notifications": "Hide notifications from this user?",
+  "navigation_bar.apps": "Mobile apps",
   "navigation_bar.blocks": "Pengguna diblokir",
   "navigation_bar.community_timeline": "Linimasa lokal",
-  "navigation_bar.compose": "",
-  "navigation_bar.direct": "",
-  "navigation_bar.discover": "",
-  "navigation_bar.domain_blocks": "",
+  "navigation_bar.compose": "Compose new toot",
+  "navigation_bar.direct": "Direct messages",
+  "navigation_bar.discover": "Discover",
+  "navigation_bar.domain_blocks": "Hidden domains",
   "navigation_bar.edit_profile": "Ubah profil",
   "navigation_bar.favourites": "Favorit",
-  "navigation_bar.filters": "",
+  "navigation_bar.filters": "Muted words",
   "navigation_bar.follow_requests": "Permintaan mengikuti",
-  "navigation_bar.follows_and_followers": "",
+  "navigation_bar.follows_and_followers": "Follows and followers",
   "navigation_bar.info": "Informasi selengkapnya",
   "navigation_bar.keyboard_shortcuts": "Keyboard shortcuts",
-  "navigation_bar.lists": "",
+  "navigation_bar.lists": "Lists",
   "navigation_bar.logout": "Keluar",
   "navigation_bar.mutes": "Pengguna dibisukan",
-  "navigation_bar.personal": "",
-  "navigation_bar.pins": "",
+  "navigation_bar.personal": "Personal",
+  "navigation_bar.pins": "Pinned toots",
   "navigation_bar.preferences": "Pengaturan",
-  "navigation_bar.profile_directory": "",
+  "navigation_bar.profile_directory": "Profile directory",
   "navigation_bar.public_timeline": "Linimasa gabungan",
-  "navigation_bar.security": "",
+  "navigation_bar.security": "Security",
   "notification.favourite": "{name} menyukai status anda",
   "notification.follow": "{name} mengikuti anda",
-  "notification.mention": "",
-  "notification.poll": "",
+  "notification.mention": "{name} mentioned you",
+  "notification.poll": "A poll you have voted in has ended",
   "notification.reblog": "{name} mem-boost status anda",
   "notifications.clear": "Hapus notifikasi",
   "notifications.clear_confirmation": "Apa anda yakin hendak menghapus semua notifikasi anda?",
   "notifications.column_settings.alert": "Notifikasi desktop",
   "notifications.column_settings.favourite": "Favorit:",
-  "notifications.column_settings.filter_bar.advanced": "",
-  "notifications.column_settings.filter_bar.category": "",
-  "notifications.column_settings.filter_bar.show": "",
+  "notifications.column_settings.filter_bar.advanced": "Display all categories",
+  "notifications.column_settings.filter_bar.category": "Quick filter bar",
+  "notifications.column_settings.filter_bar.show": "Show",
   "notifications.column_settings.follow": "Pengikut baru:",
   "notifications.column_settings.mention": "Balasan:",
-  "notifications.column_settings.poll": "",
-  "notifications.column_settings.push": "",
+  "notifications.column_settings.poll": "Poll results:",
+  "notifications.column_settings.push": "Push notifications",
   "notifications.column_settings.reblog": "Boost:",
   "notifications.column_settings.show": "Tampilkan dalam kolom",
   "notifications.column_settings.sound": "Mainkan suara",
-  "notifications.filter.all": "",
-  "notifications.filter.boosts": "",
-  "notifications.filter.favourites": "",
-  "notifications.filter.follows": "",
-  "notifications.filter.mentions": "",
-  "notifications.filter.polls": "",
-  "notifications.group": "",
-  "poll.closed": "",
-  "poll.refresh": "",
-  "poll.total_votes": "",
-  "poll.vote": "",
-  "poll_button.add_poll": "",
-  "poll_button.remove_poll": "",
+  "notifications.filter.all": "All",
+  "notifications.filter.boosts": "Boosts",
+  "notifications.filter.favourites": "Favourites",
+  "notifications.filter.follows": "Follows",
+  "notifications.filter.mentions": "Mentions",
+  "notifications.filter.polls": "Poll results",
+  "notifications.group": "{count} notifications",
+  "poll.closed": "Closed",
+  "poll.refresh": "Refresh",
+  "poll.total_votes": "{count, plural, one {# vote} other {# votes}}",
+  "poll.vote": "Vote",
+  "poll_button.add_poll": "Add a poll",
+  "poll_button.remove_poll": "Remove poll",
   "privacy.change": "Tentukan privasi status",
   "privacy.direct.long": "Kirim hanya ke pengguna yang disebut",
   "privacy.direct.short": "Langsung",
@@ -290,99 +292,100 @@
   "privacy.public.short": "Publik",
   "privacy.unlisted.long": "Tidak ditampilkan di linimasa publik",
   "privacy.unlisted.short": "Tak Terdaftar",
-  "regeneration_indicator.label": "",
+  "regeneration_indicator.label": "Loading…",
   "regeneration_indicator.sublabel": "Linimasa anda sedang disiapkan!",
-  "relative_time.days": "",
-  "relative_time.hours": "",
-  "relative_time.just_now": "",
-  "relative_time.minutes": "",
-  "relative_time.seconds": "",
+  "relative_time.days": "{number}d",
+  "relative_time.hours": "{number}h",
+  "relative_time.just_now": "now",
+  "relative_time.minutes": "{number}m",
+  "relative_time.seconds": "{number}s",
   "reply_indicator.cancel": "Batal",
-  "report.forward": "",
-  "report.forward_hint": "",
+  "report.forward": "Forward to {target}",
+  "report.forward_hint": "The account is from another server. Send an anonymized copy of the report there as well?",
   "report.hint": "The report will be sent to your instance moderators. You can provide an explanation of why you are reporting this account below:",
   "report.placeholder": "Komentar tambahan",
   "report.submit": "Kirim",
   "report.target": "Melaporkan",
   "search.placeholder": "Pencarian",
-  "search_popout.search_format": "",
-  "search_popout.tips.full_text": "",
+  "search_popout.search_format": "Advanced search format",
+  "search_popout.tips.full_text": "Simple text returns statuses you have written, favourited, boosted, or have been mentioned in, as well as matching usernames, display names, and hashtags.",
   "search_popout.tips.hashtag": "tagar",
-  "search_popout.tips.status": "",
-  "search_popout.tips.text": "",
-  "search_popout.tips.user": "",
-  "search_results.accounts": "",
-  "search_results.hashtags": "",
-  "search_results.statuses": "",
+  "search_popout.tips.status": "status",
+  "search_popout.tips.text": "Simple text returns matching display names, usernames and hashtags",
+  "search_popout.tips.user": "user",
+  "search_results.accounts": "People",
+  "search_results.hashtags": "Hashtags",
+  "search_results.statuses": "Toots",
+  "search_results.statuses_fts_disabled": "Searching toots by their content is not enabled on this Mastodon server.",
   "search_results.total": "{count, number} {count, plural, one {hasil} other {hasil}}",
-  "status.admin_account": "",
-  "status.admin_status": "",
-  "status.block": "",
-  "status.cancel_reblog_private": "",
-  "status.cannot_reblog": "",
-  "status.copy": "",
+  "status.admin_account": "Open moderation interface for @{name}",
+  "status.admin_status": "Open this status in the moderation interface",
+  "status.block": "Block @{name}",
+  "status.cancel_reblog_private": "Unboost",
+  "status.cannot_reblog": "This post cannot be boosted",
+  "status.copy": "Copy link to status",
   "status.delete": "Hapus",
-  "status.detailed_status": "",
-  "status.direct": "",
-  "status.embed": "",
+  "status.detailed_status": "Detailed conversation view",
+  "status.direct": "Direct message @{name}",
+  "status.embed": "Embed",
   "status.favourite": "Difavoritkan",
-  "status.filtered": "",
+  "status.filtered": "Filtered",
   "status.load_more": "Tampilkan semua",
   "status.media_hidden": "Media disembunyikan",
   "status.mention": "Balasan @{name}",
-  "status.more": "",
-  "status.mute": "",
-  "status.mute_conversation": "",
+  "status.more": "More",
+  "status.mute": "Mute @{name}",
+  "status.mute_conversation": "Mute conversation",
   "status.open": "Tampilkan status ini",
-  "status.pin": "",
-  "status.pinned": "",
-  "status.read_more": "",
-  "status.reblog": "",
-  "status.reblog_private": "",
+  "status.pin": "Pin on profile",
+  "status.pinned": "Pinned toot",
+  "status.read_more": "Read more",
+  "status.reblog": "Boost",
+  "status.reblog_private": "Boost to original audience",
   "status.reblogged_by": "di-boost {name}",
-  "status.reblogs.empty": "",
-  "status.redraft": "",
+  "status.reblogs.empty": "No one has boosted this toot yet. When someone does, they will show up here.",
+  "status.redraft": "Delete & re-draft",
   "status.reply": "Balas",
   "status.replyAll": "Balas ke semua",
   "status.report": "Laporkan @{name}",
   "status.sensitive_warning": "Konten sensitif",
-  "status.share": "",
+  "status.share": "Share",
   "status.show_less": "Tampilkan lebih sedikit",
-  "status.show_less_all": "",
+  "status.show_less_all": "Show less for all",
   "status.show_more": "Tampilkan semua",
-  "status.show_more_all": "",
-  "status.show_thread": "",
-  "status.unmute_conversation": "",
-  "status.unpin": "",
-  "suggestions.dismiss": "",
-  "suggestions.header": "",
+  "status.show_more_all": "Show more for all",
+  "status.show_thread": "Show thread",
+  "status.unmute_conversation": "Unmute conversation",
+  "status.unpin": "Unpin from profile",
+  "suggestions.dismiss": "Dismiss suggestion",
+  "suggestions.header": "You might be interested in…",
   "tabs_bar.federated_timeline": "Gabungan",
   "tabs_bar.home": "Beranda",
   "tabs_bar.local_timeline": "Lokal",
   "tabs_bar.notifications": "Notifikasi",
-  "tabs_bar.search": "",
-  "time_remaining.days": "",
-  "time_remaining.hours": "",
-  "time_remaining.minutes": "",
-  "time_remaining.moments": "",
-  "time_remaining.seconds": "",
-  "trends.count_by_accounts": "",
+  "tabs_bar.search": "Search",
+  "time_remaining.days": "{number, plural, one {# day} other {# days}} left",
+  "time_remaining.hours": "{number, plural, one {# hour} other {# hours}} left",
+  "time_remaining.minutes": "{number, plural, one {# minute} other {# minutes}} left",
+  "time_remaining.moments": "Moments remaining",
+  "time_remaining.seconds": "{number, plural, one {# second} other {# seconds}} left",
+  "trends.count_by_accounts": "{count} {rawCount, plural, one {person} other {people}} talking",
   "ui.beforeunload": "Naskah anda akan hilang jika anda keluar dari Mastodon.",
   "upload_area.title": "Seret & lepaskan untuk mengunggah",
   "upload_button.label": "Tambahkan media",
-  "upload_error.limit": "",
-  "upload_error.poll": "",
+  "upload_error.limit": "File upload limit exceeded.",
+  "upload_error.poll": "File upload not allowed with polls.",
   "upload_form.description": "Deskripsikan untuk mereka yang tidak bisa melihat dengan jelas",
   "upload_form.focus": "Potong",
   "upload_form.undo": "Undo",
   "upload_progress.label": "Mengunggah...",
-  "video.close": "",
+  "video.close": "Close video",
   "video.exit_fullscreen": "Keluar dari layar penuh",
   "video.expand": "Perbesar video",
-  "video.fullscreen": "",
-  "video.hide": "",
-  "video.mute": "",
-  "video.pause": "",
-  "video.play": "",
-  "video.unmute": ""
+  "video.fullscreen": "Full screen",
+  "video.hide": "Hide video",
+  "video.mute": "Mute sound",
+  "video.pause": "Pause",
+  "video.play": "Play",
+  "video.unmute": "Unmute sound"
 }
