--- a/config/locales/simple_form.en.yml
+++ b/config/locales/simple_form.en.yml
@@ -105,7 +105,7 @@ en:
         setting_display_media_show_all: Show all
         setting_expand_spoilers: Always expand toots marked with content warnings
         setting_hide_network: Hide your network
-        setting_ignore_toot_language: Ignore language information of toots
+        setting_ignore_toot_language: Show toots without their language attributes (for CJK language)
         setting_noindex: Opt-out of search engine indexing
         setting_reduce_motion: Reduce motion in animations
         setting_show_application: Disclose application used to send toots
