--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -26,7 +26,7 @@ en:
     hosted_on: Mastodon hosted on %{domain}
     instance_actor_html: |
       <h3>Virtual ActivityPub actor</h3>
-      <p>This account is a virtual actor used to represent activity that is specific to the instance and not any individual user of the instance.</p>
+      <p>This account is a virtual actor used to represent the instance itself and not any individual. It is used for federation purposes and should not be blocked unless you want to block the whole instance.</p>
     learn_more: Learn more
     privacy_policy: Privacy policy
     see_whats_happening: See what's happening
